feat(auth): Implement login and registration UI with Tailwind CSS
This commit introduces the login and registration user interfaces, styled using Tailwind CSS, to enhance the user experience. Key changes include:

- Implemented a responsive layout with a background image on the left and a form on the right.
- Styled input fields and buttons to match the design specifications.
- Integrated Google Sign-In functionality.
- Added a navigation link to create an account.
- Used heroicons for visual cues in input fields.
- Added descriptive comments for increased code maintainability.
- Verified consistency with style guidelines using lint and prettier.

These changes enhance the user experience and align with project style guidelines, improving maintainability and visual appeal.

BREAKING CHANGE: There are no breaking changes.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.1.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "daisyui": "^4.12.23",
