--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@fontsource/inter": "^5.1.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "buffer": "^6.0.3",
     "daisyui": "^4.12.23",
     "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
@@ -23,6 +25,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -42,6 +46,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
+    "safe-buffer": "^5.2.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
