feat: Add utility functions, update TypeScript configuration, and enhance Tailwind CSS setup; introduce Card component with customizable styles

--- a/package.json
+++ b/package.json
@@ -17,21 +17,28 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "daisyui": "^4.12.23",
     "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
     "stream-browserify": "^3.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "util": "^0.12.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^22.13.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
